--- a/css/style.css
+++ b/css/style.css
@@ -3137,7 +3137,7 @@ input[type="checkbox"]:checked {
 .gallery__col img {
   width: 100%;
   display: block;
-  mix-blend-mode: luminosity;
+  /* mix-blend-mode: luminosity; */
   transition: opacity 0.3s ease-in-out;
 }
 
@@ -3467,4 +3467,60 @@ input::placeholder {
 
 .trav .p-inputtext {
   margin: 7px;
+}
+
+/* Text comes on hover effet */
+
+.img-area {
+  width: 100%;
+  margin: 2% auto;
+}
+
+.single-img {
+  position: relative;
+  width: 100%;
+  float: left;
+  margin: 0 1%;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.img-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #6587a5b6;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.single-img:hover .img-overlay {
+  height: 100%;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-family: poppins;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
+.text span {
+  font-weight: 300;
 }
