--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,6 @@ textarea {
 * {
   font-family: "Inter var";
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 a {
@@ -3234,13 +3232,14 @@ input[type="checkbox"]:checked {
 }
 
 .gallery::before {
-  background: linear-gradient(to bottom, transparent, white 70%);
+  background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.37) 90%);
   position: fixed;
   bottom: 0;
   left: 0;
   content: "";
   width: 100%;
-  height: 20vh;
+  height: 10vh;
+  opacity: 0.5;
 }
 
 
@@ -3420,7 +3419,7 @@ input[type="checkbox"]:checked {
 }
 
 
-/*  */
+/* New Section */
 .card {
   position: relative;
   display: flex;
@@ -3445,13 +3444,13 @@ input[type="checkbox"]:checked {
   cursor: pointer;
 }
 
-.p-multiselect-label-container .p-multiselect-label {
+/* .p-multiselect-label-container .p-multiselect-label {
   margin-left: 10px;
-}
+} */
 
-.p-placeholder {
+/* .p-placeholder {
   margin-left: 10px;
-}
+} */
 
 .p-multiselect-items-label {
   margin-left: 10px;
@@ -3466,7 +3465,11 @@ input[type="checkbox"]:checked {
 }
 
 .p-virtualscroller-content {
-  padding-left: 1rem !important;
+  padding-left: 0.5rem !important;
+}
+
+.p-multiselect-panel .p-multiselect-items .p-multiselect-item {
+  padding: 0 !important;
 }
 
 .p-dropdown-items {
@@ -3477,17 +3480,17 @@ input[type="checkbox"]:checked {
   padding: 10px 20px;
 }
 
-.p-inputtext {
+/* .p-inputtext {
   margin: 7px;
-}
+} */
 
 .btn-sub {
   margin-top: 33px;
 }
 
-.p-inputtext {
+/* .p-inputtext {
   margin: 0px;
-}
+} */
 
 input::placeholder {
   color: #6B7280 !important;
@@ -3497,7 +3500,8 @@ input::placeholder {
 }
 
 .trav .p-inputtext {
-  margin: 7px;
+  margin: -4px;
+  font-size: 15px;
 }
 
 /* Text comes on hover effet */
@@ -3558,8 +3562,8 @@ input::placeholder {
 
 /* Best places */
 #carousel {
-  position: absolute;
-  height: 200px;
+  position: relative;
+  height: 300px;
   width: 810px;
   margin: auto;
   left: 0;
@@ -3722,4 +3726,254 @@ input::placeholder {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+/* footer */
+footer .main-footer {
+  padding: 20px 0;
+  background: #252525;
+}
+
+footer ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+/* Copy Right Footer */
+.footer-copyright {
+  background: #222;
+  padding: 5px 0;
+}
+
+.footer-copyright .logo {
+  display: inherit;
+}
+
+.footer-copyright nav {
+  float: right;
+  margin-top: 5px;
+}
+
+.footer-copyright nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-copyright nav ul li {
+  border-left: 1px solid #505050;
+  display: inline-block;
+  line-height: 12px;
+  margin: 0;
+  padding: 0 8px;
+}
+
+.footer-copyright nav ul li a {
+  color: #969696;
+}
+
+.footer-copyright nav ul li:first-child {
+  border: medium none;
+  padding-left: 0;
+}
+
+.footer-copyright p {
+  color: #969696;
+  margin: 2px 0 0;
+}
+
+.footer-top {
+  background: #252525;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 3px solid #222;
+}
+
+footer.transparent .footer-top,
+footer.transparent .main-footer {
+  background: transparent;
+}
+
+footer.transparent .footer-copyright {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+}
+
+footer.light .footer-top {
+  background: #f9f9f9;
+}
+
+footer.light .main-footer {
+  background: #f9f9f9;
+}
+
+footer.light .footer-copyright {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+}
+
+.footer- .logo {
+  display: inline-block;
+}
+
+/*==================== 
+	Widgets 
+====================== */
+.widget {
+  padding: 20px;
+  margin-bottom: 40px;
+}
+
+.widget.widget-last {
+  margin-bottom: 0px;
+}
+
+.widget.no-box {
+  padding: 0;
+  background-color: transparent;
+  margin-bottom: 40px;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+}
+
+.widget.subscribe p {
+  margin-bottom: 18px;
+}
+
+.widget li a {
+  color: #ff8d1e;
+}
+
+.widget li a:hover {
+  color: #4b92dc;
+}
+
+.widget-title {
+  margin-bottom: 20px;
+}
+
+.widget-title span {
+  background: #839fad none repeat scroll 0 0;
+  display: block;
+  height: 1px;
+  margin-top: 25px;
+  position: relative;
+  width: 20%;
+}
+
+.widget-title span::after {
+  background: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  top: -4px;
+  width: 50%;
+}
+
+.widget-title.text-center span,
+.widget-title.text-center span::after {
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
+.widget .badge {
+  float: right;
+  background: #7f7f7f;
+}
+
+.typo-light h1,
+.typo-light h2,
+.typo-light h3,
+.typo-light h4,
+.typo-light h5,
+.typo-light h6,
+.typo-light p,
+.typo-light div,
+.typo-light span,
+.typo-light small {
+  color: #fff;
+}
+
+ul.social-footer2 {
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+
+ul.social-footer2 li {
+  display: inline-block;
+  padding: 0;
+}
+
+ul.social-footer2 li a:hover {
+  background-color: #ff8d1e;
+}
+
+ul.social-footer2 li a {
+  display: block;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+}
+
+.btn {
+  background-color: #ff8d1e;
+  color: #fff;
+}
+
+.btn:hover,
+.btn:focus,
+.btn.active {
+  background: #4b92dc;
+  color: #fff;
+  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 250ms ease-in-out 0s;
+  -moz-transition: all 250ms ease-in-out 0s;
+  -ms-transition: all 250ms ease-in-out 0s;
+  -o-transition: all 250ms ease-in-out 0s;
+  transition: all 250ms ease-in-out 0s;
+}
+
+
+
+/* departure date */
+
+.p-datepicker th {
+  text-align: center !important;
+  /* text-align: -webkit-match-parent; */
+}
+
+.p-component {
+  border: none;
+  margin: 0px;
+}
+
+/* .p-calendar .p-component {
+  border: none;
+  margin: 7px !important;
+} */
+.p-datepicker .p-datepicker-header {
+  padding: 0 !important;
+}
+
+.p-datepicker .p-datepicker-buttonbar {
+  padding: 0 !important;
+}
+
+.p-datepicker table td {
+  padding: 0.2rem !important;
+}
+
+.p-calendar:not(.p-calendar-disabled).p-focus>.p-inputtext {
+  outline-offset: 0;
+  border-color: none !important;
+  outline: 0;
+  box-shadow: none !important;
 }
