--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,11 @@ a:hover {
   object-fit: cover;
 }
 
-/* .priceTagConainer {
+.priceTagConainer {
   position: relative;
-} */
+}
 
-/* .priceTag {
+ .priceTag {
   float: right;
   border-radius: 50%;
   padding: 10px;
@@ -85,7 +85,7 @@ a:hover {
   flex-direction: column;
   gap: 6px;
   padding: 0 15px 10px 0px;
-  /* }
+   }
 
 .card-heading {
   font-size: 20px;
@@ -109,7 +109,7 @@ a:hover {
   min-height: 178px;
 }
 
-/* @media (min-width: 768px) and (max-width: 1199px) {
+ @media (min-width: 768px) and (max-width: 1199px) {
   .list {
     min-height: 235px;
   }
@@ -2589,17 +2589,17 @@ input[type="checkbox"]:checked {
 }
 
 @media (max-width: 991px) {
-  /* .box_shadow {
+  .box_shadow {
     margin-bottom: 25px;
-  } */
+  }
 
   .popular_bottom .mb-zero {
     margin-bottom: 0px;
   }
 
-  /* .popular_top {
+  .popular_top {
     margin-bottom: 0px;
-  } */
+  }
 
   .popular_bottom {
     margin-bottom: 0px;
@@ -2774,7 +2774,7 @@ input[type="checkbox"]:checked {
 
 @media (max-width: 640px) {
 
-  /* .top_heading, */
+  .top_heading,
   .top_heading2,
   .top_heading3 {
     margin: 17px 0 11px !important;
@@ -3004,9 +3004,9 @@ input[type="checkbox"]:checked {
     margin-bottom: 10px;
   }
 
-  /* .popular_top {
+  .popular_top {
     margin-bottom: 0px;
-  } */
+  }
 
   .popover {
     min-width: 220px;
@@ -3022,958 +3022,4 @@ input[type="checkbox"]:checked {
 }
 
 
-/* Top cruise Line */
-.top-place-heading {
-  text-decoration: underline;
-  text-align: center;
-}
 
-.grid-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 80vh;
-  font-family: system-ui;
-  background: #ffffff;
-  color: #000;
-  text-align: center;
-}
-
-.grid-container1 {
-  display: grid;
-  grid-template-areas:
-    "item1 item2 item3"
-    "item1 item4 item3";
-  height: 100%;
-  width: auto;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-
-.grid-item {
-  width: 400px;
-  height: 300px;
-  background-color: #f1f1f1;
-}
-
-.grid-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15%;
-}
-
-.grid-item img {
-  height: 100%;
-  width: 100%;
-  border-radius: 15%;
-}
-
-.item1 {
-  transition: 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-position: center;
-  background-size: cover;
-  background-image: url("./topcruise/celebrity.jpg");
-  grid-area: item1;
-}
-
-.item2 {
-  background-image: url("./topcruise/norwegian_img5.jpg");
-  grid-area: item2;
-}
-
-.item3 {
-  background-image: url("./topcruise/viking.jpg");
-  grid-area: item3;
-}
-
-.item4 {
-  background-image: url("./topcruise/princess.jpg");
-  grid-area: item4;
-}
-
-.grid-item {
-  transition: 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-position: center;
-  background-size: cover;
-}
-
-.grid-item p {
-  opacity: 0;
-  transform: scale(0);
-  transition: 0.8s;
-  font-size: 2rem;
-  color: white;
-  cursor: pointer;
-}
-
-.grid-item:hover {
-  box-shadow: 0 0 0 200px rgba(0, 0, 0, 0.534) inset;
-}
-
-.grid-item:hover p {
-  opacity: 1;
-  transform: scale(1);
-}
-
-/* popular cruise destinaion */
-.gallery__col {
-  flex: calc(25% - var(--size-2));
-  max-width: calc(25% - var(--size-2));
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
-}
-
-.gallery__col img {
-  width: 100%;
-  display: block;
-  /* mix-blend-mode: luminosity; */
-  transition: opacity 0.3s ease-in-out;
-}
-
-.gallery__col img:hover {
-  opacity: 0.9;
-  mix-blend-mode: normal;
-  /* scale: 1.1; */
-}
-
-.page {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-areas: "header" "main";
-  color: black;
-  background-color: white;
-  min-height: 100vh;
-  font-family: var(--font-sans);
-}
-
-.page__header {
-  grid-area: header;
-  font-family: var(--font-sans);
-}
-
-.page__main {
-  grid-area: main;
-
-}
-
-.header {
-  position: relative;
-  top: 40px;
-  padding: var(--size-6) var(--size-6);
-  text-align: center;
-}
-
-.header__title {
-  margin-top: var(--size-6);
-  margin-bottom: var(--size-6);
-  font-size: var(--font-size-fluid-2);
-  font-weight: var(--font-weight-6);
-
-}
-
-.header__desc {
-  font-size: var(--font-size-fluid-1);
-  line-height: var(--font-lineheight-2);
-}
-
-.page-main {
-  display: grid;
-  grid-template-areas: "gallery";
-}
-
-.main__gallery {
-  grid-area: gallery;
-}
-
-.gallery {
-  display: flex;
-  gap: var(--size-2);
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: var(--size-2);
-  /* padding-bottom: 10em; */
-}
-
-.gallery::before {
-  background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.37) 90%);
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 10vh;
-  opacity: 0.5;
-}
-
-
-
-@media screen and (max-width: 48em) {
-  .gallery__col {
-    flex: calc(50% - var(--size-2));
-    max-width: calc(50% - var(--size-2));
-  }
-}
-
-@media screen and (max-width: 36em) {
-  .gallery__col {
-    flex: calc(100% - var(--size-2));
-    max-width: calc(100% - var(--size-2));
-  }
-}
-
-.gallery__img {
-  margin-bottom: var(--size-2);
-}
-
-
-/*Top popular places */
-#slideshow {
-  margin: 0 auto;
-  /* padding-top: 50px; */
-  height: 500px;
-  width: 100%;
-  /* background-color: #ffffff; */
-  box-sizing: border-box;
-}
-
-.slideshow-title {
-  font-family: "Allerta Stencil";
-  font-size: 62px;
-  color: #fff;
-  margin: 0 auto;
-  text-align: center;
-  margin-top: 25%;
-  letter-spacing: 3px;
-  font-weight: 300;
-}
-
-.sub-heading {
-  padding-top: 50px;
-  font-size: 18px;
-}
-
-.sub-heading-two {
-  font-size: 15px;
-}
-
-.sub-heading-three {
-  font-size: 13px;
-}
-
-.sub-heading-four {
-  font-size: 11px;
-}
-
-.sub-heading-five {
-  font-size: 9px;
-}
-
-.sub-heading-six {
-  font-size: 7px;
-}
-
-.sub-heading-seven {
-  font-size: 5px;
-}
-
-.sub-heading-eight {
-  font-size: 3px;
-}
-
-.sub-heading-nine {
-  font-size: 1px;
-}
-
-.entire-content {
-  margin: auto;
-  width: 290px;
-  perspective: 1000px;
-  position: relative;
-  padding-top: 80px;
-}
-
-.content-carrousel {
-  width: 100%;
-  position: absolute;
-  float: right;
-  animation: rotar 35s infinite linear;
-  transform-style: preserve-3d;
-}
-
-.content-carrousel:hover {
-  animation-play-state: paused;
-  cursor: pointer;
-}
-
-.content-carrousel figure {
-  width: 100%;
-  height: 150px;
-  border: 1px solid #3b444b;
-  overflow: hidden;
-  position: absolute;
-  border-radius: 10px;
-}
-
-.content-carrousel figure:nth-child(1) {
-  transform: rotateY(0deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(2) {
-  transform: rotateY(40deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(3) {
-  transform: rotateY(80deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(4) {
-  transform: rotateY(120deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(5) {
-  transform: rotateY(160deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(6) {
-  transform: rotateY(200deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(7) {
-  transform: rotateY(240deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(8) {
-  transform: rotateY(280deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(9) {
-  transform: rotateY(320deg) translateZ(450px);
-}
-
-.content-carrousel figure:nth-child(10) {
-  transform: rotateY(360deg) translateZ(450px);
-}
-
-.shadow {
-  position: absolute;
-  box-shadow: 0px 0px 20px 0px #000;
-  border-radius: 1px;
-}
-
-.content-carrousel img {
-  image-rendering: auto;
-  transition: all 100ms;
-  width: 100%;
-  height: 100%
-}
-
-.content-carrousel img:hover {
-  transform: scale(1.2);
-  transition: all 100ms;
-}
-
-@keyframes rotar {
-  from {
-    transform: rotateY(0deg);
-  }
-
-  to {
-    transform: rotateY(360deg);
-  }
-}
-
-.image {
-  width: 300px;
-  height: 300px;
-  background-size: cover;
-  border-radius: 10px;
-  margin: 10px;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px #000;
-}
-
-.image .all {
-  transform: translateY(100%);
-  bottom: 0;
-  box-shadow: 0px 0px 10px black;
-  width: 300px;
-  position: absolute;
-  overflow: hidden;
-  transition: 0.5s;
-  z-index: 1;
-  opacity: 0;
-}
-
-.image .text {
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.6);
-  font-family: "Bowlby One SC", cursive;
-}
-
-.image .bg {
-  width: 300px;
-  height: 300px;
-  position: absolute;
-  z-index: -1;
-  bottom: 0;
-  background-size: cover;
-  border-radius: 10px;
-  filter: blur(5px);
-}
-
-.image:hover .all {
-  transform: translateY(0%);
-  opacity: 1;
-}
-
-/* New Section */
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, .125);
-  width: 20%;
-}
-
-.p-multiselect-header {
-  display: none;
-}
-
-.p-multiselect-label-container {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  flex-shrink: 0;
-  cursor: pointer;
-}
-
-
-.p-multiselect-checkbox {
-  padding: 0;
-}
-
-.p-multiselect-item .p-multiselect-checkbox {
-  padding: 10px;
-}
-
-.p-virtualscroller-content {
-  padding-left: 0.5rem !important;
-}
-
-.p-multiselect-panel .p-multiselect-items .p-multiselect-item {
-  padding: 0 !important;
-}
-
-.p-dropdown-items {
-  padding: 0;
-}
-
-.p-dropdown-items .p-dropdown-item {
-  padding: 10px 20px;
-}
-
-
-.btn-sub {
-  margin-top: 33px;
-}
-
-
-input::placeholder {
-  color: #6B7280 !important;
-  font-family: "Inter var";
-  font-size: 15px;
-  font-weight: 400;
-}
-
-.trav .p-inputtext {
-  margin: -4px;
-  font-size: 15px;
-}
-
-/* Text comes on hover effet */
-
-.img-area {
-  position: relative;
-  top: 121px;
-  width: 100%;
-  margin: 2% auto;
-}
-
-.single-img {
-  position: relative;
-  width: 100%;
-  float: left;
-  margin: 0 1%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.img-overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #6587a5b6;
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
-}
-
-.single-img:hover .img-overlay {
-  height: 100%;
-}
-
-.text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: #fff;
-  text-align: center;
-  font-size: 20px;
-  font-family: poppins;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: bold;
-}
-
-.text span {
-  font-weight: 300;
-}
-
-/* Best places */
-#carousel {
-  position: relative;
-  height: 300px;
-  width: 810px;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-
-.arrow {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  text-align: center;
-  font-size: 25px;
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 20px;
-  color: #228291;
-  line-height: 30px;
-  margin-top: 85px;
-  z-index: 1000;
-}
-
-.arrow-right {
-  left: 780px;
-}
-
-.item {
-  text-align: center;
-  color: white;
-  font-size: 40px;
-  position: absolute;
-  transition: height 1s, width 1s, left 1s, margin-top 1s, line-height 1s, background-color 1s;
-}
-
-.level-2 {
-  height: 150px;
-  width: 110px;
-  line-height: 150px;
-  background-color: #228291;
-  left: 650px;
-  margin-top: 25px;
-}
-
-.level-1 {
-  height: 180px;
-  width: 130px;
-  line-height: 180px;
-  background-color: #6796E5;
-  left: 500px;
-  margin-top: 10px;
-}
-
-.level0 {
-  height: 200px;
-  width: 150px;
-  line-height: 200px;
-  background-color: #4EC9E1;
-  left: 330px;
-}
-
-.level1 {
-  height: 180px;
-  width: 130px;
-  line-height: 180px;
-  background-color: #6796E5;
-  margin-top: 10px;
-  left: 180px;
-}
-
-.level2 {
-  height: 150px;
-  width: 110px;
-  line-height: 150px;
-  background-color: #228291;
-  margin-top: 25px;
-  left: 50px;
-}
-
-.left-enter {
-  opacity: 0;
-  left: -60px;
-  height: 120px;
-  width: 90px;
-  line-height: 120px;
-  margin-top: 40px;
-}
-
-.left-enter.left-enter-active {
-  opacity: 1;
-  left: 50px;
-  height: 150px;
-  width: 110px;
-  line-height: 150px;
-  margin-top: 25px;
-  transition: left 1s, opacity 1s, height 1s, width 1s, margin-top 1s, line-height 1s;
-}
-
-.left-leave {
-  opacity: 1;
-  left: 650px;
-  height: 150px;
-  width: 110px;
-  line-height: 150px;
-  margin-top: 25px;
-}
-
-.left-leave.left-leave-active {
-  left: 780px;
-  opacity: 0;
-  height: 120px;
-  line-height: 120px;
-  margin-top: 40px;
-  width: 90px;
-  transition: left 1s, opacity 1s, height 1s, width 1s, margin-top 1s, line-height 1s;
-}
-
-.right-enter {
-  opacity: 0;
-  left: 760px;
-  height: 120px;
-  width: 90px;
-  line-height: 120px;
-  margin-top: 40px;
-}
-
-.right-enter.right-enter-active {
-  left: 650px;
-  opacity: 1;
-  height: 150px;
-  margin-top: 25px;
-  line-height: 150px;
-  width: 110px;
-  transition: left 1s, opacity 1s, height 1s, width 1s, margin-top 1s, line-height 1s;
-}
-
-.right-leave {
-  left: 50px;
-  height: 150px;
-  opacity: 1;
-  margin-top: 25px;
-  line-height: 150px;
-  width: 110px;
-}
-
-.right-leave.right-leave-active {
-  left: -60px;
-  opacity: 0;
-  height: 120px;
-  width: 90px;
-  line-height: 120px;
-  margin-top: 40px;
-  transition: left 1s, opacity 1s, height 1s, width 1s, margin-top 1s, line-height 1s;
-}
-
-.noselect {
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* footer */
-footer .main-footer {
-  padding: 20px 0;
-  background: #252525;
-}
-
-footer ul {
-  padding-left: 0;
-  list-style: none;
-}
-
-/* Copy Right Footer */
-.footer-copyright {
-  background: #222;
-  padding: 5px 0;
-}
-
-.footer-copyright .logo {
-  display: inherit;
-}
-
-.footer-copyright nav {
-  float: right;
-  margin-top: 5px;
-}
-
-.footer-copyright nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.footer-copyright nav ul li {
-  border-left: 1px solid #505050;
-  display: inline-block;
-  line-height: 12px;
-  margin: 0;
-  padding: 0 8px;
-}
-
-.footer-copyright nav ul li a {
-  color: #969696;
-}
-
-.footer-copyright nav ul li:first-child {
-  border: medium none;
-  padding-left: 0;
-}
-
-.footer-copyright p {
-  color: #969696;
-  margin: 2px 0 0;
-}
-
-.footer-top {
-  background: #252525;
-  padding-bottom: 30px;
-  margin-bottom: 30px;
-  border-bottom: 3px solid #222;
-}
-
-footer.transparent .footer-top,
-footer.transparent .main-footer {
-  background: transparent;
-}
-
-footer.transparent .footer-copyright {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
-}
-
-footer.light .footer-top {
-  background: #f9f9f9;
-}
-
-footer.light .main-footer {
-  background: #f9f9f9;
-}
-
-footer.light .footer-copyright {
-  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
-}
-
-.footer- .logo {
-  display: inline-block;
-}
-
-/*==================== 
-	Widgets 
-====================== */
-.widget {
-  padding: 20px;
-  margin-bottom: 40px;
-}
-
-.widget.widget-last {
-  margin-bottom: 0px;
-}
-
-.widget.no-box {
-  padding: 0;
-  background-color: transparent;
-  margin-bottom: 40px;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  -ms-box-shadow: none;
-  -o-box-shadow: none;
-}
-
-.widget.subscribe p {
-  margin-bottom: 18px;
-}
-
-.widget li a {
-  color: #ff8d1e;
-}
-
-.widget li a:hover {
-  color: #4b92dc;
-}
-
-.widget-title {
-  margin-bottom: 20px;
-}
-
-.widget-title span {
-  background: #839fad none repeat scroll 0 0;
-  display: block;
-  height: 1px;
-  margin-top: 25px;
-  position: relative;
-  width: 20%;
-}
-
-.widget-title span::after {
-  background: inherit;
-  content: "";
-  height: inherit;
-  position: absolute;
-  top: -4px;
-  width: 50%;
-}
-
-.widget-title.text-center span,
-.widget-title.text-center span::after {
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-}
-
-.widget .badge {
-  float: right;
-  background: #7f7f7f;
-}
-
-.typo-light h1,
-.typo-light h2,
-.typo-light h3,
-.typo-light h4,
-.typo-light h5,
-.typo-light h6,
-.typo-light p,
-.typo-light div,
-.typo-light span,
-.typo-light small {
-  color: #fff;
-}
-
-ul.social-footer2 {
-  margin: 0;
-  padding: 0;
-  width: auto;
-}
-
-ul.social-footer2 li {
-  display: inline-block;
-  padding: 0;
-}
-
-ul.social-footer2 li a:hover {
-  background-color: #ff8d1e;
-}
-
-ul.social-footer2 li a {
-  display: block;
-  height: 30px;
-  width: 30px;
-  text-align: center;
-}
-
-.btn {
-  background-color: #ff8d1e;
-  color: #fff;
-}
-
-.btn:hover,
-.btn:focus,
-.btn.active {
-  background: #4b92dc;
-  color: #fff;
-  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-  -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 250ms ease-in-out 0s;
-  -moz-transition: all 250ms ease-in-out 0s;
-  -ms-transition: all 250ms ease-in-out 0s;
-  -o-transition: all 250ms ease-in-out 0s;
-  transition: all 250ms ease-in-out 0s;
-}
-
-
-
-/* departure date */
-
-.p-datepicker th {
-  text-align: center !important;
-}
-
-.p-component {
-  border: none;
-  margin: 0px;
-}
-
-.p-datepicker .p-datepicker-header {
-  padding: 0 !important;
-}
-
-.p-datepicker .p-datepicker-buttonbar {
-  padding: 0 !important;
-}
-
-.p-datepicker table td {
-  padding: 0.2rem !important;
-}
-
-.p-calendar:not(.p-calendar-disabled).p-focus>.p-inputtext {
-  outline-offset: 0;
-  border-color: none !important;
-  outline: 0;
-  box-shadow: none !important;
-}
